修改车信tips箭头图和退出线关联关系和高亮，卡车交限tips渲染加载报错

--- a/less/editor.less
+++ b/less/editor.less
@@ -95,6 +95,10 @@ a{
   }
 }
 
+.label{
+  padding:0;
+}
+
 .fm-banner {
   .absolute-position(0,auto,0,0);
   width: 50px;
@@ -694,6 +698,18 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
   margin-right: 10px;
 }
 /**********tips style**********/
+.tips-thumbnail{
+  height:50px;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s ;
+  -ms-transition: all .3s ;
+  -o-transition: all .3s ;
+  transition: all .3s ;
+  &.active{
+    //border-bottom: 3px solid #49A7DA;
+    background-color: #4C4B4B;
+  }
+}
 .modal-tips-img {
   left: 242px;
   position: relative;
