修改tips样式，名称信息控制不换行显示

--- a/less/editor.less
+++ b/less/editor.less
@@ -613,6 +613,10 @@ label > input[type='checkbox'] {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.text-nowrap{
+  white-space: normal;
+  //word-break: break-all;
+}
 .fm-console-content {
   height: 100%;
   overflow-y: auto;
