--- a/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -226,23 +226,23 @@
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('name')">
                             <label class="col-sm-5 control-label" style="padding: 4px">名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称:</label>
-                            <div class="col-sm-7 text-ellipsis" style="padding: 4px">
-                                <span class="label " title="{{dataTipsData.name}}">{{dataTipsData.name}}</span>
+                            <div class="col-sm-7" style="padding: 4px">
+                                <span class="label text-nowrap" title="{{dataTipsData.name}}">{{dataTipsData.name}}</span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('n_array')">
                             <label class="col-sm-5 control-label" style="padding: 4px">名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称:</label>
                             <div class="col-sm-7" style="padding: 4px">
-                                <div ng-repeat="item in dataTipsData.n_array" class="text-ellipsis">
-                                    <span class="label" ng-bind="item" title="{{item}}"></span>
+                                <div ng-repeat="item in dataTipsData.n_array">
+                                    <span class="label text-nowrap" ng-bind="item" title="{{item}}"></span>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.isGeneralRoad">
                             <label class="col-sm-5 control-label" style="padding: 4px">名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称:</label>
-                            <div class="col-sm-7 text-ellipsis">
+                            <div class="col-sm-7">
                                 <div class="col-sm-12" style="padding: 3px" ng-repeat="items in dataTipsData.o_array">
-                                    <span class="label blank-text" ng-bind="name" ng-repeat="name in items.n_array"></span>
+                                    <span class="label blank-text text-nowrap" ng-bind="name" ng-repeat="name in items.n_array"></span>
                                 </div>
                             </div>
                         </div>
