--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -554,6 +554,9 @@ label > input[type='checkbox'] {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.text-nowrap {
+  white-space: normal;
+}
 .fm-console-content {
   height: 100%;
   overflow-y: auto;
