车道连通车道选择业务检查

--- a/scripts/components/road/tpls/attr_lane_tpl/rdLaneTopoTpl.html
+++ b/scripts/components/road/tpls/attr_lane_tpl/rdLaneTopoTpl.html
@@ -46,7 +46,7 @@
                                                             <input type="checkbox" class="ng-pristine ng-valid ng-touched" ng-click="showInMap(cItem.pid)">
                                                         </div>
                                                         <label>显示</label>
-                                                        <label style="width: 70%;cursor:Pointer" ng-click="showLaneDetails(cItem)">连通PID：{{cItem.pid}}</label>
+                                                        <label style="width: 70%;cursor:Pointer" ng-click="showLaneDetails(cItem,$index)">连通PID：{{cItem.pid}}</label>
 
                                                     </li>
                                                 </ul>
