--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -135,6 +135,7 @@
                         <button class="fm-top-btn blank" title="制作详细车道" ng-controller="addRdRelationCtrl" ng-click="addShape('RDLANE')">详</button>
                         <button class="fm-top-btn blank" title="制作车道连通" ng-controller="addRdRelationCtrl" ng-click="addShape('RDLANETOPO')">连</button>
                         <button class="fm-top-btn blank" title="制作语音引导" ng-controller="addRdRelationCtrl" ng-click="addShape('RDVOICEGUIDE')">语</button>
+                        <button class="fm-top-btn blank" title="制作限高限重" ng-controller="addRdRelationCtrl" ng-click="addShape('RDHGWGLIMIT')">重</button>
                     </div>
                 </div>
             </li>
