bug 修改，电子眼坐标显示

--- a/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
+++ b/scripts/components/road/tpls/attr_electronic_tpl/electronicEyeTpl.html
@@ -115,7 +115,7 @@
                     <li>
                         <label class="control-label">电子眼坐标</label>
                         <div>
-                            ({{electronicEyeData.geometry.coordinates.join(',')}})
+                        	<input type="text" class="chosen-disabled" ng-model="coordinates" disabled/>
                         </div>
                     </li>
                 </ul>
