--- a/scripts/components/road/tpls/attr_restrict_tpl/rdRestricOfOrdinaryTpl.html
+++ b/scripts/components/road/tpls/attr_restrict_tpl/rdRestricOfOrdinaryTpl.html
@@ -3,7 +3,7 @@
         普通交限
         <span class="label label-info">{{rdRestrictData.pid}}</span>
     </div>
-    <div class="content scroll-styled dark" style="height:90%;" ><!-- oncontextmenu="self.event.returnValue=false" -->
+    <div class="content scroll-styled dark" style="height:90%;" >
         <form name="restricOrdinaryForm">
             <div class="fm-panel">
                 <div class="content">
@@ -12,11 +12,11 @@
                             <div ng-repeat="item in rdRestrictData.details" class="inline" style="width: auto;min-width: 20px;">
                                  <span style=" float: right;font-size: 12px;top: 5px;margin-top: -10px;color: #fff;cursor: pointer;"
                                        class="glyphicon glyphicon-remove-sign" ng-click="deleteDirect(item,$event,$index)"></span>
-                                <img ng-if="item.flag===1"
+                                <img title="点击修改退出线" ng-if="item.flag===1"
                                      ng-src="../../../images/road/1302/1302_1_{{item.restricInfo}}.svg"
                                      class="show-tips" data-index="{{$index}}" ng-class="{'active':$index==0}"
                                      ng-click="showTips(item,$event,$index)">
-                                <img ng-if="item.flag===2||item.flag===0"
+                                <img title="点击修改退出线" ng-if="item.flag===2||item.flag===0"
                                      ng-src="../../../images/road/1302/1302_2_{{item.restricInfo}}.svg"
                                      data-index="{{$index}}" ng-class="{'active':$index==0}" class="show-tips"
                                      ng-click="showTips(item,$event,$index)">
@@ -32,8 +32,10 @@
                         </li>
                         <li>
                             <label class="control-label">退出</label>
-                            <div><input type="text"
-                                        ng-model="rdSubRestrictData.outLinkPid"  class="chosen-disabled" readonly/></div>
+                            <div>
+                                <input style="width: 70%;" type="text" ng-model="rdSubRestrictData.outLinkPid"  class="chosen-disabled" readonly/>
+                                <span style="font-size: 14px" ng-click="modifyOutLink()" class="glyphicon glyphicon-edit"></span>
+                            </div>
                         </li>
                         <li>
                             <label class="control-label">交限标志</label>
@@ -99,6 +101,25 @@
                                  style="width:100%;padding: 5px;"></div>
                         </li>
 
+                    </ul>
+
+                </div>
+            </div>
+            <div ng-if="rdSubRestrictData.vias.length" class="fm-panel">
+                <div class="content">
+                    <ul class="fm-ul fm-ul-form">
+                        <li>
+                            <label class="control-label">经过线:</label>
+                            <div>
+                                <span style="font-size: 14px;float: right;" ng-click="modifyThroughLink()" class="glyphicon glyphicon-edit"></span>
+                            </div>
+                        </li>
+                        <li ng-repeat="item in currentVias">
+                            <label class="control-label">经过线{{$index+1}}</label>
+                            <div>
+                                <input type="text" class="chosen-disabled" ng-model="item.linkPid" disabled="disabled" />
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
