--- a/scripts/components/road/tpls/attr_link_tpl/rticTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/rticTpl.html
@@ -45,6 +45,7 @@
             <div>
                 <a ng-click="addTmcLocation()" style="cursor: pointer;color:#FFF;">TMC信息（共<span ng-if="rticData!=undefined">{{rticData.intRtics.length}}</span>条）</a>
                 <span title="显示场景" class="glyphicon glyphicon-transfer" style="padding-top:0px;float: right;color: darkgray;float: right;cursor:pointer;" ng-click="showScene(3)"></span>
+                <span title="框选" class="glyphicon glyphicon-unchecked" style="padding-top:0px;float: right;color: darkgray;float: right;cursor:pointer;" ng-click="selectTmcPoint();"></span>
             </div>
         </div>
         <div class="content">
