--- a/scripts/components/road/tpls/attr_restrict_tpl/addDitrectTpl.html
+++ b/scripts/components/road/tpls/attr_restrict_tpl/addDitrectTpl.html
@@ -26,7 +26,7 @@
 <div ng-controller="addDirectOfRestController" id="addDirectOfRest">
     <ul class="list-group list-group-lg m-b-none">
         <li class="list-group-item">
-            <div><label class="control-label">增加交限</label></div>
+            <div><label class="control-label">增加交限方向箭头</label></div>
             <div><label class="control-label">提示：选择交限图标后选择退出线,然后点击增加</label></div>
         </li>
         <li class="list-group-item">
