修改专题图描述名称

--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -202,7 +202,7 @@
             <li><a href="#" ng-click="openAdvancedToolsPanel('search')">搜 索</a></li>
             <!--<li><a href="#">检 查</a></li>-->
             <li><a href="#" ng-click="openSpecialWorkPanelTpl()">道路名作业</a></li>
-            <li><a href="#" ng-click="openAdvancedToolsPanel('thematicMap')">FC专题图</a></li>
+            <li><a href="#" ng-click="openAdvancedToolsPanel('thematicMap')">专题图</a></li>
             <li role="presentation" class="divider"></li>
             <li><a href="#" ng-click="changeLayerSnap('link')">捕捉线 <i class="glyphicon glyphicon-ok pull-right" ng-if="linkChecked"></i></a></li>
             <li><a href="#" ng-click="changeLayerSnap('node')">捕捉点 <i class="glyphicon glyphicon-ok pull-right" ng-show="nodeChecked"></i></a></li>
