交限修改箭头方向和分歧检查结果定位与高亮

--- a/scripts/components/road/tpls/attr_restrict_tpl/rdRestricOfOrdinaryTpl.html
+++ b/scripts/components/road/tpls/attr_restrict_tpl/rdRestricOfOrdinaryTpl.html
@@ -102,7 +102,7 @@
                         <li>
                             <label class="control-label">经过线:</label>
                             <div>
-                                <span style="font-size: 14px;float: right;" ng-if="editStatus" ng-click="modifyThroughLink()" class="glyphicon glyphicon-edit"></span>
+                                <span style="font-size: 14px;float: right;cursor: pointer" ng-if=false ng-click="modifyThroughLink()" class="glyphicon glyphicon-edit"></span>
                             </div>
                         </li>
                         <li ng-repeat="item in rdRestrictionCurrentDetail.vias">
