--- a/scripts/components/road/tpls/toolBar_cru_tpl/addRestrictionTepl/addRdrestrictionTpl.html
+++ b/scripts/components/road/tpls/toolBar_cru_tpl/addRestrictionTepl/addRdrestrictionTpl.html
@@ -73,6 +73,11 @@
             <div><label class="control-label">创建交限</label></div>
         </li>
         <li class="list-group-item">
+            <div>
+                <label>进入线进入点选择后选择方向箭头，点击空格程序自动计算退出线，如程序计算错误，可手动选择退出线进行修改</label>
+            </div>
+        </li>
+        <li class="list-group-item">
             <div class="inline" ng-repeat="item in directData.showNormalData">
                 <div>
                     <span style="float: right;font-size: 12px;top: 0px;margin-top: -5px;
