--- a/scripts/components/road/tpls/attr_lane_tpl/rdLaneTopoTpl.html
+++ b/scripts/components/road/tpls/attr_lane_tpl/rdLaneTopoTpl.html
@@ -20,42 +20,41 @@
                                         <i class="glyphicon glyphicon-floppy-disk"></i> 保 存
                                     </button>
                                 </div>
-                                <div class="btn-group" role="group">
-                                    <button type="button" class="btn" ng-click="doCancel()">
-                                        <i class="glyphicon glyphicon-repeat"></i> 取消操作
-                                    </button>
-                                </div>
+                                <!--<div class="btn-group" role="group">-->
+                                <!--<button type="button" class="btn" ng-click="doCancel()">-->
+                                <!--<i class="glyphicon glyphicon-repeat"></i> 取消操作-->
+                                <!--</button>-->
+                                <!--</div>-->
                                 <div class="btn-group" role="group">
                                     <button type="button" class="btn" ng-click="doClose()">
                                         <i class="glyphicon glyphicon-floppy-remove"></i> 关 闭
                                     </button>
                                 </div>
                             </div>
-                            <!--<div class="fm-component" s>-->
-                            <div style="background-color:#1c1c20;right:0px;position: absolute;width: 260px;" class="fm-component">
+                            <div style="background-color:#1c1c20;right:0px;position: absolute;width: 270px;"
+                                 class="fm-component">
                                 <div class="title">
                                     车道连通
                                 </div>
-                                <!--<form>-->
-                                    <div class="fm-panel" style="margin-bottom: 5px;">
-                                        <div class="title">
-                                            <div>原始车道连通（共 <span ng-bind="laneTopoInfoArr.length">0</span> 条）</div>
-                                        </div>
-                                        <div class="content">
-                                            <div ng-repeat="cItem in laneTopoInfoArr" class="blackTheme module-box">
-                                                <ul class="fm-ul fm-ul-form">
-                                                    <li>
-                                                        <div style="width: 10%;min-width:0px">
-                                                            <input type="checkbox" class="ng-pristine ng-valid ng-touched" ng-click="showLaneDetails(cItem,$index)">
-                                                        </div>
-                                                        <label>显示</label>
-                                                        <label style="width: 70%;">连通PID：{{cItem.pid}}</label>
-
-                                                    </li>
-                                                </ul>
-                                            </div>
+                                <div class="fm-panel" style="margin-bottom: 5px;">
+                                    <div class="title">
+                                        <div>原始车道连通（共 <span ng-bind="laneTopoInfoArr.length">0</span> 条）</div>
+                                    </div>
+                                    <div class="content">
+                                        <div ng-repeat="cItem in laneTopoInfoArr" class="blackTheme module-box">
+                                            <ul class="fm-ul fm-ul-form">
+                                                <li>
+                                                    <label style="width: 10%;">{{$index +1}}.</label>
+                                                    <label style="width: 70%;"
+                                                           ng-click="showLaneDetails(cItem,$index,1)">连通PID：{{cItem.pid}}</label>
+                                                    <div style="width: 10%;">
+                                                            <span class="glyphicon glyphicon-remove-sign remove" ng-click="deleteLaneDetails(cItem, $index)"></span>
+                                                    </div>
+                                                </li>
+                                            </ul>
                                         </div>
                                     </div>
+                                </div>
                                 <div class="fm-panel" style="margin-bottom: 5px;">
                                     <div class="title">
                                         <div>删除车道连通（共 <span ng-bind="deleteLaneTopoArr.length">0</span> 条）</div>
@@ -64,11 +63,8 @@
                                         <div ng-repeat="cItem in deleteLaneTopoArr" class="blackTheme module-box">
                                             <ul class="fm-ul fm-ul-form">
                                                 <li>
-                                                    <div style="width: 10%;min-width:0px">
-                                                        <input type="checkbox" class="ng-pristine ng-valid ng-touched" ng-click="showInMap(cItem.pid)">
-                                                    </div>
-                                                    <label>显示</label>
-                                                    <label style="width: 70%">连通PID：{{cItem.pid}}</label>
+                                                    <label style="width: 10%;">{{$index +1}}.</label>
+                                                    <label style="width: 70%;" ng-click="showLaneDetails(cItem,$index,2)">连通PID：{{cItem.pid}}</label>
                                                 </li>
                                             </ul>
                                         </div>
@@ -82,22 +78,20 @@
                                         <div ng-repeat="cItem in insertLaneTopoArr" class="blackTheme module-box">
                                             <ul class="fm-ul fm-ul-form">
                                                 <li>
-                                                    <div style="width: 10%;min-width:0px">
-                                                        <input type="checkbox" class="ng-pristine ng-valid ng-touched" ng-click="showInMap(cItem.pid)">
-                                                    </div>
-                                                    <label>显示</label>
-                                                    <label style="width: 70%">连通PID：{{cItem.pid}}</label>
+                                                    <label style="width: 10%;">{{$index +1}}.</label>
+                                                    <label style="width: 70%;" ng-click="showLaneDetails(cItem,$index,3)">连通PID：{{cItem.pid}}</label>
                                                 </li>
                                             </ul>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="fm-panel" style="margin-bottom: 5px;margin-top: 5px;" ng-if="showLaneDetail">
+                                <div class="fm-panel" style="margin-bottom: 5px;margin-top: 5px;"
+                                     ng-if="showLaneDetail">
                                     <div class="title">
                                         <div>属性列表</div>
                                     </div>
                                     <div class="content">
-                                        <div  class="blackTheme module-box">
+                                        <div class="blackTheme module-box">
                                             <ul class="fm-ul fm-ul-form">
                                                 <li>
                                                     <label style="width: 40%">连通号码：</label>
@@ -125,58 +119,69 @@
                                                 </li>
                                                 <li>
                                                     <label style="width: 40%">通达方向：</label>
-                                                    <label style="width: 60%">{{laneDetail.reachDir}}</label>
-                                                    <!--<div>-->
-                                                        <!--<input type="text" class="ng-pristine ng-valid ng-touched" ng-model="laneDetail.reachDir" disabled>-->
+                                                    <label style="width: 60%">{{reachDirTrans[laneDetail.reachDir]}}</label>
+                                                </li>
+                                                <li>
+                                                    <label style="width: 40%">车辆类型：</label>
+                                                    <label style="width: 60%">{{laneDetail.vehicle}}</label>
+                                                </li>
+                                                <li>
+                                                    <label style="width: 30%">处理标志：</label>
+                                                    <div class="inline" style="width: 70%">
+                                                        <select ng-model="laneDetail.processFlag" ng-options="value.id as value.label for value in processFlagOption">
+                                                            <option>--</option>
+                                                        </select>
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <label style="width: 30%">是否借道：</label>
+                                                    <div class="inline" style="width: 70%">
+                                                        <select ng-model="laneDetail.throughTurn" ng-options="value.id as value.label for value in throughTurnOption">
+                                                            <option>--</option>
+                                                        </select>
+                                                    </div>
+                                                </li>
+
+                                                <!--<li>-->
+                                                    <!--<div class="date-well full-width">-->
+                                                        <!--<div class="date-head">-->
+                                                            <!--<label>车辆类型</label>-->
+                                                            <!--&lt;!&ndash;<div class="pull-right" style="display:inline-flex;color: #fff">&ndash;&gt;-->
+                                                                <!--&lt;!&ndash;<a style="cursor: pointer;"  ng-click="showPopover($event,$index)">添加</a>&ndash;&gt;-->
+                                                                <!--&lt;!&ndash;<input  type="checkbox" id="checkallow" ng-model="laneDetail.vehicle" ng-checked="isAllowed[$index]" ng-click="changeAllowed($index)" >允许&ndash;&gt;-->
+                                                            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                                                        <!--</div>-->
+                                                        <!--<div class="date-body full-width">-->
+                                                            <!--<div ng-class="{'select-car animated-fast':true,'blue':isAllowed[$parent.$index],'red':!isAllowed[$parent.$index]}" ng-repeat="item in carData[$index] track by $index" ng-click="carSelect(item,$parent.$index);">-->
+                                                                <!--<div class="select-car-text" ng-bind="item.label"></div>-->
+                                                                <!--<span class="glyphicon glyphicon-remove remove-car-type"></span>-->
+                                                            <!--</div>-->
+                                                            <!--<div class="clearfix"></div>-->
+                                                            <!--<div class="line"></div>-->
+                                                        <!--</div>-->
                                                     <!--</div>-->
-                                                </li>
-                                                <li>
-                                                    <label>时间段：</label>
-                                                    <div>
-                                                        <input type="text" class="ng-pristine ng-valid ng-touched" ng-model="laneDetail.reachDir">
-                                                    </div>
-                                                </li>
-                                                <li>
-                                                    <label>车辆类型：</label>
-                                                    <div>
-                                                        <input type="text" class="ng-pristine ng-valid ng-touched" ng-model="laneDetail.vehicle" disabled>
-                                                    </div>
-                                                </li>
-                                                <li>
-                                                    <label>处理标志：</label>
-                                                    <div>
-                                                        <input type="text" class="ng-pristine ng-valid ng-touched" ng-model="laneDetail.processFlag">
-                                                    </div>
-                                                </li>
-                                                <li>
-                                                    <label>是否借道关系：</label>
-                                                    <div>
-                                                        <input type="text" class="ng-pristine ng-valid ng-touched" ng-model="laneDetail.throughTurn">
-                                                    </div>
+                                                <!--</li>-->
+
+                                                <li class="list-group-item">
+                                                    <div ng-include="dateURL" class="muti-date" data-type="1" date-str='{{laneDetail.timeDomain}}' style="width:100%;padding: 5px;"></div>
                                                 </li>
                                             </ul>
 
                                         </div>
                                     </div>
                                 </div>
-                                <div class="fm-panel" style="margin-bottom: 5px;"  ng-if="showLaneDetail">
+                                <div class="fm-panel" style="margin-bottom: 5px;" ng-if="showLaneDetail">
                                     <div class="title">
                                         <div>经过线（共 <span ng-bind="laneDetail.topoVias.length">0</span> 条）</div>
                                     </div>
-                                    <div class="content" ng-repeat="cItem in laneDetail.topoVias" >
-                                        <div class="blackTheme module-box">
-                                            <ul class="fm-ul fm-ul-form">
-                                                <!--<li >-->
-                                                    <!--<label style="width: auto">Lane序号</label>-->
-                                                    <!--<div>-->
-                                                        <!--<input type="text" class="fm-control" ng-model="cItem.seqNum" disabled/>-->
-                                                    <!--</div>-->
-                                                <!--</li>-->
-                                                <li >
+                                    <div class="content">
+                                        <div ng-repeat="cItem in laneDetail.topoVias" class="blackTheme module-box">
+                                            <ul class="fm-ul fm-ul-form" style="border-bottom:1px dashed;margin-bottom: 1px;">
+                                                <li>
                                                     <label style="width: 50%">Lane{{cItem.seqNum}}号码：</label>
                                                     <label style="width: 50%">{{cItem.lanePid}}</label>
                                                 </li>
-                                                <li >
+                                                <li>
                                                     <label style="width: 50%">经过Link：</label>
                                                     <label style="width: 50%">{{cItem.viaLinkPid}}</label>
                                                 </li>
@@ -184,9 +189,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!--</form>-->
                             </div>
-                                <!--</div>-->
                         </div>
                     </div>
 
